--- a/weatherapp/package.json
+++ b/weatherapp/package.json
@@ -1,5 +1,6 @@
 {
   "name": "weatherapp",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.4",
+    "express": "^4.18.2",
     "node-fetch": "^3.3.2"
   }
 }
